backend for prescriptions done

--- a/src/app/doctor_home/components/DoctorProfile.module.css
+++ b/src/app/doctor_home/components/DoctorProfile.module.css
@@ -14,7 +14,7 @@
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   }
-  
+  /* Details Grid */
   .profileGrid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
